ui/src/assets/widgets/grid_layout.scss
// Copyright (C) 2023 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

@import "../theme";

$pf-responsive-gutter: 8px;

.pf-grid-layout {
  display: grid;
  gap: $pf-responsive-gutter;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
  margin: $pf-responsive-gutter;

  align-items: start;

  & > .pf-grid-layout-column {
    display: flex;
    flex-direction: column;
    gap: $pf-responsive-gutter;
  }

  .pf-grid-layout-column > * {
    word-break: break-word;
  }

  td {
    word-break: break-all;
  }
}

